# spire3

./: .gitignore  CMakeLists.txt  README.md  STRUCTURE.md  check_build_env.sh  note.md  readme2.md
bindings/: doc.md
include/combat/: Action_doc.txt  player_doc.txt
include/combat/doc/: battlecontext_doc.txt  card_doc.txt  monster_doc.txt
include/constants/doc/: Card_Related_doc.txt  Event_and _room_doc copy.txt  Monster_Related_doc.txt  Others_doc.txt  Relics_Related_doc.txt  Status_Related_doc.txt  增加内容.txt
include/game/doc/: Random_save.txt  card_deck_reliccontainer.txt  game_map.txt  neow_reward_shop.txt
src/game/: 游戏外输入.txt
src/sim/doc/: printhelp.md
